--- a/pradeep.css
+++ b/pradeep.css
@@ -4,14 +4,12 @@
   column-gap: 50px;
 
 }
-.left-form {
-
-  background-color: gray;
+.left-top-form {
   display: grid;
   grid-template-columns: 1fr 1fr ;
-  padding: 10px;
-  row-gap: 50px;
-  column-gap: 60px;
+  padding-left: 20px;
+  row-gap: 25px;
+  column-gap: 25px;
 }
 
 .select{
@@ -19,30 +17,43 @@
   display: flex;
   height: fit-content;
   font-size: 15px;
+  border: 1px;
+  border-style: solid;
+  border-color: black;
   border-radius: 10px;
+  color: gray;
 }
 
 .job {
   padding: 10px;
   font-size: 15px;
   border-radius: 10px;
+  border: 1px;
+  border-style: solid;
 }
-.job-box{
+.EXP-SAL_box{
   display:grid;
-  column-gap: 30px;
+  column-gap: 10px;
   grid-template-columns: auto auto;
   justify-content: space-between;
 
 }
 
-.job1{
+.EXP-SAL{
+  padding-left: 10px;
   display: flex;
-  padding: 10px;
   font-size: 15px;
   border-radius: 10px;
+  border: 1px;
+  border-style: solid;
+  min-width: 250px;
 }
 
 .inner-rightbox{
-  margin: 10px;
+  display: grid;
+  grid-row: 1fr;
+  padding: 30px;
+  row-gap: 30px;
+  margin-right: 200px;
   background-color: grey;
 }
